<resources>
    <string name="app_name">Download Redirection</string>

    <!-- main -->
    <string name="key_setting_enable_module" translatable="false">enable_module</string>
    <string name="key_setting_hide_icon" translatable="false">hide_icon</string>
    <string name="key_setting_debug_log" translatable="false">debug_log</string>
    <string name="key_setting_not_specify_downloader" translatable="false">not_specify_downloader</string>
    <string name="key_setting_downloader" translatable="false">downloader</string>
    <string name="key_setting_filter" translatable="false">filter</string>
    <string name="key_about_version" translatable="false">version</string>
    <string name="key_about_github" translatable="false">github</string>

    <string name="title_category_settings">Settings</string>
    <string name="title_setting_enable_module">Enable Module</string>
    <string name="title_setting_hide_icon">Hide Icon</string>
    <string name="title_setting_debug_log">Debug Log</string>
    <string name="title_setting_not_specify_downloader">Not Specify Downloader</string>
    <string name="title_setting_downloader">Downloader</string>
    <string name="title_setting_filter">Filter</string>
    <string name="title_category_about">About</string>
    <string name="title_about_version">Version</string>
    <string name="title_about_github" translatable="false">Github</string>
    <string name="url_about_github" translatable="false">https://github.com/Erbzur/download-redirection</string>
    <string name="summary_setting_downloader">Currently used: %s</string>
    <string name="summary_setting_downloader_none">none</string>
    <string name="summary_setting_filter">%d apps applied</string>
    <string name="msg_module_not_active">Module Not Active!</string>

    <!-- downloader -->
    <string name="key_current_downloader" translatable="false">current_downloader</string>

    <string name="title_menu_downloader_add">Add Downloader</string>
    <string name="title_menu_downloader_reset">Reset to Default</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="label_downloader_name">Name</string>
    <string name="label_package_name">Package Name</string>
    <string name="label_target">Target</string>
    <string name="label_use_intent">Use Intent</string>
    <string name="hint_downloader_name">Not contains whitespace characters</string>
    <string name="hint_package_name">Package name of the downloader</string>
    <string name="hint_target">Activity or Intent</string>
    <string name="msg_edit_text_error">Only accept %s</string>
    <string name="msg_same_downloader_exist">Downloader with the same name already exists!</string>
    <string name="msg_reset_downloaders_confirm">Clear current downloaders list and reset to default?</string>

    <!-- filter -->
    <string name="key_menu_filter_show_system_apps" translatable="false">show_system_apps</string>
    <string name="key_menu_filter_show_only_applied_apps" translatable="false">show_only_applied_apps</string>

    <string name="title_menu_filter_search">Search</string>
    <string name="title_menu_filter_show_system_apps">Show system apps</string>
    <string name="title_menu_filter_show_only_applied_apps">Show only applied apps</string>
    <string name="hint_filter_search">Search by app/package name…</string>
</resources>