<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_menu_filter_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/show_system_apps"
        android:checkable="true"
        android:title="@string/title_menu_filter_show_system_apps"
        android:titleCondensed="Persist"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_only_applied_apps"
        android:checkable="true"
        android:title="@string/title_menu_filter_show_only_applied_apps"
        android:titleCondensed="Persist"
        app:showAsAction="never" />
</menu>